[package]
name = "reference-image-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
eframe = "0.18.0"

#image = "0.24.2"

#imgui = "0.8.2"
#imgui-winit-support = "0.7"

#imgui = { version = "0.8.2", features = ["tables-api"] }
#glium = { version = "0.23.0", default-features = true }
#imgui-glium-renderer = "0.8.2"
#imgui-winit-support = "0.8.2"


#clipboard = "0.5"
#imgui = { version = "0.8.2", features = ["tables-api"] }
#image = "0.24.2"
