[package]
name = "reference-image-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24", features = ["jpeg", "png"] }
clap = { version = "3.2.12", features = ["derive"] }
assets_manager = "0.8.1"
directories = "4.0.1"
blake3 = "1.3.1"
serde = "1.0.140"
serde_json = "1.0.82"
#checksums = "0.9.1"
# sha256 = "1.0.3"

# Don't need these yet, but planning to use them..
# serde = "1.0.139"
# clipboard-win = "4.4.1"
